# cis6930sp24-assignment0

cis6930sp24-assignment0/: Pipfile  README.md  setup.cfg  setup.py
cis6930sp24-assignment0/assignment0/: database.py  download.py  extract.py  main.py
cis6930sp24-assignment0/resources/: normanpd.db
cis6930sp24-assignment0/tests/: test_download.py  test_random.py
