[metadata]
name = assignment0
version = 1.0
author = Rutika Pandhurang Shinde
author_email = shinder@ufl.edu
description = CIS 6930 Spring 2024 Assignment 0
url = https://github.com/sightunseen26/cis6930sp24-assignment0

[options]
packages = find:
 install_requires=[
        'pypdf2',
        'requests',  
        'pillow',
    ],

[options.package_data]
* = resources/*

[tool:pytest]
norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv
